tests/ui-tests/tests/cases/wrong-enum-type.stderr
error[E0277]: the trait bound `schema::CheckConclusionState: IsFieldType<CheckStatusState>` is not satisfied
  --> tests/cases/wrong-enum-type.rs:13:21
   |
13 |         pub status: CheckConclusionState,
   |                     ^^^^^^^^^^^^^^^^^^^^ the trait `IsFieldType<CheckStatusState>` is not implemented for `schema::CheckConclusionState`
   |
note: required by a bound in `SelectionBuilder::<'a, SchemaType, Variables>::select_field`
  --> $WORKSPACE/cynic/src/queries/builders.rs
   |
   |         FieldType: IsFieldType<SchemaType::Type>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, Variables>::select_field`
